{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 1152,
  "lineage": "92a7f200-28b3-50c2-a53f-9f47763a6cf2",
  "resources": [
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e5424edfe926b43",
            "arn": "arn:aws:ec2:ap-south-1:488189875832:instance/i-007dfd0a9f85c381c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-test-iam-instance-profile",
            "id": "i-007dfd0a9f85c381c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070cb6f2f414f98dc",
            "private_dns": "ip-10-0-1-253.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.253",
            "public_dns": "ec2-13-232-197-5.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.197.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-016e853ce6b825ef6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0329675d9f94051df",
            "tags": {
              "Name": "Ronak"
            },
            "tags_all": {
              "Name": "Ronak"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0183332a0b3cc4b40"
            ]
          },
          "dependencies": [
            "module.ec2-module.aws_security_group.sg",
            "module.role-policy-module.aws_iam_instance_profile.my-test-iam-instance-profile",
            "module.role-policy-module.aws_iam_role.my-test-iam-role",
            "module.vpc-module.aws_internet_gateway.gw",
            "module.vpc-module.aws_route_table.private_route_table",
            "module.vpc-module.aws_route_table.public_route_table",
            "module.vpc-module.aws_route_table.public_route_table1",
            "module.vpc-module.aws_route_table_association.aw_public_route_table",
            "module.vpc-module.aws_route_table_association.aw_public_route_table1",
            "module.vpc-module.aws_subnet.subnet_private",
            "module.vpc-module.aws_subnet.subnet_private1",
            "module.vpc-module.aws_subnet.subnet_public",
            "module.vpc-module.aws_subnet.subnet_public1",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-aws-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:488189875832:loadbalancer/app/my-test-alb/e4e955b1566dbe2b",
            "arn_suffix": "app/my-test-alb/e4e955b1566dbe2b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-test-alb-1319172362.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:488189875832:loadbalancer/app/my-test-alb/e4e955b1566dbe2b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-test-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0183332a0b3cc4b40"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0329675d9f94051df"
              },
              {
                "subnet_id": "subnet-0a56e0c99474d77f8"
              }
            ],
            "subnets": [
              "subnet-0329675d9f94051df",
              "subnet-0a56e0c99474d77f8"
            ],
            "tags": {
              "Name": "my-test-alb"
            },
            "tags_all": {
              "Name": "my-test-alb"
            },
            "vpc_id": "vpc-07d1887b074158152",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.ec2-module.aws_security_group.sg",
            "module.vpc-module.aws_internet_gateway.gw",
            "module.vpc-module.aws_route_table.private_route_table",
            "module.vpc-module.aws_route_table.public_route_table",
            "module.vpc-module.aws_route_table.public_route_table1",
            "module.vpc-module.aws_route_table_association.aw_public_route_table",
            "module.vpc-module.aws_route_table_association.aw_public_route_table1",
            "module.vpc-module.aws_subnet.subnet_private",
            "module.vpc-module.aws_subnet.subnet_private1",
            "module.vpc-module.aws_subnet.subnet_public",
            "module.vpc-module.aws_subnet.subnet_public1",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my-test-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:488189875832:listener/app/my-test-alb/e4e955b1566dbe2b/8f6971fbde1ceb43",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:488189875832:targetgroup/my-test-tg/36ed73e36bbe5375",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:488189875832:listener/app/my-test-alb/e4e955b1566dbe2b/8f6971fbde1ceb43",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:488189875832:loadbalancer/app/my-test-alb/e4e955b1566dbe2b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-module.aws_lb.my-aws-alb",
            "module.ec2-module.aws_lb_target_group.my-target-group",
            "module.ec2-module.aws_security_group.sg",
            "module.vpc-module.aws_internet_gateway.gw",
            "module.vpc-module.aws_route_table.private_route_table",
            "module.vpc-module.aws_route_table.public_route_table",
            "module.vpc-module.aws_route_table.public_route_table1",
            "module.vpc-module.aws_route_table_association.aw_public_route_table",
            "module.vpc-module.aws_route_table_association.aw_public_route_table1",
            "module.vpc-module.aws_subnet.subnet_private",
            "module.vpc-module.aws_subnet.subnet_private1",
            "module.vpc-module.aws_subnet.subnet_public",
            "module.vpc-module.aws_subnet.subnet_public1",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:488189875832:targetgroup/my-test-tg/36ed73e36bbe5375",
            "arn_suffix": "targetgroup/my-test-tg/36ed73e36bbe5375",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:488189875832:targetgroup/my-test-tg/36ed73e36bbe5375",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-test-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07d1887b074158152"
          },
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.gw",
            "module.vpc-module.aws_route_table.private_route_table",
            "module.vpc-module.aws_route_table.public_route_table",
            "module.vpc-module.aws_route_table.public_route_table1",
            "module.vpc-module.aws_route_table_association.aw_public_route_table",
            "module.vpc-module.aws_route_table_association.aw_public_route_table1",
            "module.vpc-module.aws_subnet.subnet_private",
            "module.vpc-module.aws_subnet.subnet_private1",
            "module.vpc-module.aws_subnet.subnet_public",
            "module.vpc-module.aws_subnet.subnet_public1",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my-alb-target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:488189875832:targetgroup/my-test-tg/36ed73e36bbe5375-20230713104343436000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:488189875832:targetgroup/my-test-tg/36ed73e36bbe5375",
            "target_id": "i-007dfd0a9f85c381c"
          },
          "dependencies": [
            "module.ec2-module.aws_instance.web",
            "module.ec2-module.aws_lb_target_group.my-target-group",
            "module.ec2-module.aws_security_group.sg",
            "module.role-policy-module.aws_iam_instance_profile.my-test-iam-instance-profile",
            "module.role-policy-module.aws_iam_role.my-test-iam-role",
            "module.vpc-module.aws_internet_gateway.gw",
            "module.vpc-module.aws_route_table.private_route_table",
            "module.vpc-module.aws_route_table.public_route_table",
            "module.vpc-module.aws_route_table.public_route_table1",
            "module.vpc-module.aws_route_table_association.aw_public_route_table",
            "module.vpc-module.aws_route_table_association.aw_public_route_table1",
            "module.vpc-module.aws_subnet.subnet_private",
            "module.vpc-module.aws_subnet.subnet_private1",
            "module.vpc-module.aws_subnet.subnet_public",
            "module.vpc-module.aws_subnet.subnet_public1",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:488189875832:security-group/sg-0183332a0b3cc4b40",
            "description": "Example security group created by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0183332a0b3cc4b40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sggroupbyTF",
            "name_prefix": "",
            "owner_id": "488189875832",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07d1887b074158152"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.gw",
            "module.vpc-module.aws_route_table.private_route_table",
            "module.vpc-module.aws_route_table.public_route_table",
            "module.vpc-module.aws_route_table.public_route_table1",
            "module.vpc-module.aws_route_table_association.aw_public_route_table",
            "module.vpc-module.aws_route_table_association.aw_public_route_table1",
            "module.vpc-module.aws_subnet.subnet_private",
            "module.vpc-module.aws_subnet.subnet_private1",
            "module.vpc-module.aws_subnet.subnet_public",
            "module.vpc-module.aws_subnet.subnet_public1",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:488189875832:internet-gateway/igw-0129a94dcc07a75bf",
            "id": "igw-0129a94dcc07a75bf",
            "owner_id": "488189875832",
            "tags": {
              "Name": "RP-TF-IGW"
            },
            "tags_all": {
              "Name": "RP-TF-IGW"
            },
            "vpc_id": "vpc-07d1887b074158152"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:488189875832:route-table/rtb-09c0b04523209517d",
            "id": "rtb-09c0b04523209517d",
            "owner_id": "488189875832",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_route_table"
            },
            "tags_all": {
              "Name": "Private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d1887b074158152"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:488189875832:route-table/rtb-0cc30bcb07ac71eab",
            "id": "rtb-0cc30bcb07ac71eab",
            "owner_id": "488189875832",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0129a94dcc07a75bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_route_table"
            },
            "tags_all": {
              "Name": "Public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d1887b074158152"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.gw",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:488189875832:route-table/rtb-05d28bb1e7c6c23c5",
            "id": "rtb-05d28bb1e7c6c23c5",
            "owner_id": "488189875832",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0129a94dcc07a75bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_route_table1"
            },
            "tags_all": {
              "Name": "Public_route_table1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d1887b074158152"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.gw",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aw_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d64f0bba4309f8f",
            "route_table_id": "rtb-0cc30bcb07ac71eab",
            "subnet_id": "subnet-0329675d9f94051df"
          },
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.gw",
            "module.vpc-module.aws_route_table.public_route_table",
            "module.vpc-module.aws_subnet.subnet_public",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aw_public_route_table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038dc9244e4e04a83",
            "route_table_id": "rtb-05d28bb1e7c6c23c5",
            "subnet_id": "subnet-0a56e0c99474d77f8"
          },
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.gw",
            "module.vpc-module.aws_route_table.public_route_table1",
            "module.vpc-module.aws_subnet.subnet_public1",
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:488189875832:subnet/subnet-09ec664b53e6ce9d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ec664b53e6ce9d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "488189875832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RP-TF-Private-Subnet"
            },
            "tags_all": {
              "Name": "RP-TF-Private-Subnet"
            },
            "vpc_id": "vpc-07d1887b074158152"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:488189875832:subnet/subnet-0a80b5a6b457f3bab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a80b5a6b457f3bab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "488189875832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RP-TF-Private-Subnet1"
            },
            "tags_all": {
              "Name": "RP-TF-Private-Subnet1"
            },
            "vpc_id": "vpc-07d1887b074158152"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:488189875832:subnet/subnet-0329675d9f94051df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0329675d9f94051df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "488189875832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RP-TF-Public-Subnet"
            },
            "tags_all": {
              "Name": "RP-TF-Public-Subnet"
            },
            "vpc_id": "vpc-07d1887b074158152"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:488189875832:subnet/subnet-0a56e0c99474d77f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a56e0c99474d77f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "488189875832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RP-TF-Public-Subnet1"
            },
            "tags_all": {
              "Name": "RP-TF-Public-Subnet1"
            },
            "vpc_id": "vpc-07d1887b074158152"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:488189875832:vpc/vpc-07d1887b074158152",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0377b89e89701be5a",
            "default_route_table_id": "rtb-0dc830a4b64245c52",
            "default_security_group_id": "sg-0b19ce1600016b7e5",
            "dhcp_options_id": "dopt-06b0e30f2284bece3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d1887b074158152",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc830a4b64245c52",
            "owner_id": "488189875832",
            "tags": {
              "Name": "RP-TF-VPC"
            },
            "tags_all": {
              "Name": "RP-TF-VPC"
            }
          }
        }
      ]
    }
  ]
}